# DocTranceAI

./: .gitignore
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260609_0001_initial_schema.py  20260611_0002_remove_document_count_limit.py
backend/app/: __init__.py  main.py
backend/app/api/: errors.py
backend/app/constants/: __init__.py  prompts.py
backend/app/core/: config.py  logging.py  runtime_status.py  security.py
backend/app/db/: __init__.py  session.py  tenancy.py
backend/app/dependencies/: auth.py  services.py
backend/app/exceptions/: __init__.py  base.py
backend/app/integrations/: email.py  embeddings.py  ollama.py  qdrant.py  supabase_storage.py
backend/app/middleware/: request_context.py
backend/app/models/: __init__.py  entities.py  enums.py
backend/app/repositories/: __init__.py  conversations.py  documents.py  usage.py  users.py
backend/migrations/: 001_initial_schema.sql  002_remove_document_limit.sql
backend/scripts/: migrate.js  setup_free_ai.ps1
backend/src/: app.js  config.js  db.js  errors.js  logger.js  schemas.js  security.js  server.js  worker.js
backend/test/: api-contract.test.js  chunking.test.js  extraction.test.js  files.test.js  generation.test.js  ollama.test.js  schemas.test.js  security.test.js
backend/tests/: test_api_contract.py  test_auth_schema.py  test_chunking.py  test_document_service.py  test_files.py  test_free_ai_config.py  test_generation_service.py  test_security.py
(+140 files in other folders)
