[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "doctraceai-backend"
version = "1.0.0"
description = "Production backend for the DocTraceAI document intelligence platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiosmtplib>=3.0,<4",
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "bcrypt>=4.2,<5",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "greenlet>=3.1,<4",
  "httpx>=0.28,<1",
  "langchain-text-splitters>=0.3,<1",
  "orjson>=3.10,<4",
  "passlib[bcrypt]>=1.7.4,<2",
  "prometheus-client>=0.21,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.8,<3",
  "pymupdf>=1.25,<2",
  "python-docx>=1.1,<2",
  "python-jose[cryptography]>=3.4,<4",
  "python-multipart>=0.0.20,<1",
  "qdrant-client>=1.13,<2",
  "sqlalchemy[asyncio]>=2.0.38,<3",
  "structlog>=25.1,<26",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["B008", "S101"]
extend-ignore = ["S105", "S106", "UP017", "UP037", "UP042", "UP046"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
